--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -300,7 +300,7 @@
         height: 100%
       &__block
         &-header
-          height: 300px
+          height: 320px
           overflow: hidden
           position: relative
   .footer
