--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -46,6 +46,7 @@ img
   justify-content: space-between
   flex-wrap: wrap
 .invalid
+  z-index: 0
   color: $primary
   animation: headShake
   animation-duration: 1s
