--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -52,6 +52,7 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
+    z-index: 1
     
   &__button
     position: absolute
@@ -64,6 +65,7 @@
     border: none 
     cursor: pointer 
     transition: all 0.3s ease
+    z-index: 1
     &:hover
       opacity: 0.6       
 
