--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -39,7 +39,7 @@
     overflow: hidden
     &__block
       &-header
-        height: 513px
+        height: 520px
       &-title
         margin-bottom: 27px
       &-stars
